--- a/public/assets/css/input.css
+++ b/public/assets/css/input.css
@@ -1,1 +1,5 @@
-@tailwind utilities;
+@import "tailwindcss";
+
+@source "../../../src/**/*.php";
+@source "../../../src/**/*.html";
+@source "../../../public/**/*.php";
